# Portfolio

./: README.md  app.py  pyproject.toml
.streamlit/: config.toml
pages/: ContactInfo.py  Dashboarding.py  Education.py  Home.py  NewsSentimentAnalysis.py  Snake.py  WorkExperience.py
