[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Daniel Bibby <12dbibb@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"
pandas = "^2.2.3"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
